--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/gray"
+    android:background="@color/white"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
@@ -23,7 +23,14 @@
             android:gravity="center"
             android:layout_centerInParent="true"
             android:textColor="@color/black"
-            android:text="@string/settings"
+            android:text="@string/robot_settings"
+            />
+        <Button
+            android:id="@+id/sure"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:text="@string/btn_sure"
             />
     </RelativeLayout>
     <ScrollView
@@ -34,45 +41,58 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="0.5dp"/>
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:text="@string/deskname"
-                    android:textColor="@color/black"
-                    android:gravity="center"
+                    android:layout_width="120dp"
                     android:textSize="25sp"
-                    />
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_height="match_parent"
+                    android:text="@string/name"/>
                 <EditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/add_desk"
+                    android:textSize="25sp"
+                    android:gravity="center"
                     android:textColor="@color/black"
-                    android:layout_weight="1"
-                    />
-                <Button
-                    android:id="@+id/change_name"
-                    android:layout_width="80dp"
                     android:layout_height="match_parent"
-                    android:text="@string/name_setting"
                     />
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="0.5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="0.5dp"/>
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_height="match_parent"
-                    android:text="@string/command_settings"
+                    android:layout_width="120dp"
                     android:textSize="25sp"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_height="match_parent"
+                    android:text="@string/area"/>
+                <Spinner
+                    android:id="@+id/area"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     />
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="0.5dp"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
