--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_dialog.xml
@@ -5,10 +5,6 @@
     android:orientation="horizontal"
     >
     <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -20,49 +16,40 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:gravity="center"
                 android:text="@string/add_area"
                 android:textSize="29sp"
-                android:layout_weight="1"
                 />
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#000000"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:textColor="@color/black"
                 android:textSize="27sp"
                 android:textColorHint="#7D7D7D"
-                android:layout_weight="1"
                 />
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal"
                 >
                 <Button
                     android:id="@+id/positiveButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@animator/btn_selector"
                     android:text="@string/btn_sure"
-                    android:layout_weight="1"
                     />
                 <Button
                     android:id="@+id/negativeButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@animator/btn_selector"
                     android:text="@string/btn_cancle"
-                    android:layout_weight="1"
                     />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </LinearLayout>
