--- a/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/command_name"
+                android:id="@+id/text"
                 android:layout_width="@dimen/btn_width"
                 android:layout_height="60dp"
                 android:gravity="center"
@@ -24,7 +24,7 @@
                 android:textSize="25sp"
                 />
             <Button
-                android:id="@+id/straight"
+                android:id="@+id/btn"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
