--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -62,11 +62,12 @@
                         android:gravity="center"
                         android:textSize="25sp"
                         />
+
                     <Spinner
                         android:id="@+id/goal"
                         android:layout_width="match_parent"
-                        android:gravity="center"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:gravity="center" />
                 </LinearLayout>
             </LinearLayout>
             <View
@@ -130,7 +131,7 @@
                     <EditText
                         android:id="@+id/speed"
                         android:layout_width="match_parent"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -162,7 +163,7 @@
                     <EditText
                         android:id="@+id/mp3"
                         android:layout_width="match_parent"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -194,7 +195,7 @@
                     <EditText
                         android:id="@+id/outime"
                         android:layout_width="match_parent"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -226,7 +227,7 @@
                     <EditText
                         android:id="@+id/shownum"
                         android:layout_width="match_parent"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -258,7 +259,7 @@
                     <EditText
                         android:id="@+id/showcolor"
                         android:layout_width="match_parent"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -266,6 +267,12 @@
                 android:layout_width="match_parent"
                 android:background="@color/black"
                 android:layout_height="0.5dp"/>
+            <Button
+                android:id="@+id/btn_sure"
+                android:layout_width="match_parent"
+                android:text="@string/btn_sure"
+                android:textSize="25sp"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
