--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -6,55 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
-    <Button
-        android:id="@+id/shrink"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@mipmap/ic_launcher"/>
-    <Button
-        android:id="@+id/btn0"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:visibility="gone"
-        android:background="@mipmap/ic_launcher"/>
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:visibility="gone"
-        android:background="@mipmap/ic_launcher"/>
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:visibility="gone"
-        android:background="@mipmap/ic_launcher"/>
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:visibility="gone"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@mipmap/ic_launcher"/>
 
     <RelativeLayout
         android:id="@+id/main"
@@ -127,42 +78,12 @@
         >
         <GridView
             android:id="@+id/gview"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numColumns="auto_fit"
             android:columnWidth="80dp"
             android:stretchMode="columnWidth"
             />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-            <Button
-                android:id="@+id/up"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="前进"/>
-            <Button
-                android:id="@+id/down"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="后退"/>
-            <Button
-                android:id="@+id/left"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="左转"/>
-            <Button
-                android:id="@+id/right"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="右转"/>
-            <Button
-                android:id="@+id/stop"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="停止"/>
-        </LinearLayout>
     </LinearLayout>
     <RelativeLayout
         android:layout_below="@+id/main"
@@ -243,5 +164,68 @@
     <!--android:layout_marginBottom="10dip" android:layout_marginLeft="10dip"-->
     <!--android:layout_alignParentBottom="true" android:layout_above="@id/button_composer_camera">-->
     <!--</Button>-->
-
+    <Button
+        android:id="@+id/up"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="10dp"
+        android:text="前进"
+        android:visibility="gone"
+        android:background="@mipmap/ic_launcher"/>
+    <Button
+        android:id="@+id/down"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="130dp"
+        android:text="后退"
+        android:visibility="gone"
+        android:background="@mipmap/ic_launcher"/>
+    <Button
+        android:id="@+id/left"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="190dp"
+        android:layout_marginRight="10dp"
+        android:text="左转"
+        android:visibility="gone"
+        android:background="@mipmap/ic_launcher"/>
+    <Button
+        android:id="@+id/right"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="右转"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="250dp"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:background="@mipmap/ic_launcher"/>
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="310dp"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:text="停止"
+        android:background="@mipmap/ic_launcher"/>
+    <Button
+        android:id="@+id/shrink"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@mipmap/ic_launcher"/>
 </RelativeLayout>
