--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot.xml
@@ -71,13 +71,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
+
                 <TextView
+                    android:id="@+id/textView"
                     android:layout_width="120dp"
-                    android:textSize="25sp"
-                    android:gravity="center"
-                    android:textColor="@color/black"
                     android:layout_height="match_parent"
-                    android:text="@string/ip"/>
+                    android:gravity="center"
+                    android:text="@string/ip"
+                    android:textColor="@color/black"
+                    android:textSize="25sp" />
+
                 <TextView
                     android:id="@+id/ip"
                     android:layout_width="wrap_content"
@@ -205,9 +208,11 @@
             <View
                 android:layout_width="match_parent"
                 android:background="@color/black"
+                android:visibility="gone"
                 android:layout_height="0.5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
@@ -228,9 +233,11 @@
             <View
                 android:layout_width="match_parent"
                 android:background="@color/black"
+                android:visibility="gone"
                 android:layout_height="0.5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
@@ -251,9 +258,11 @@
             <View
                 android:layout_width="match_parent"
                 android:background="@color/black"
+                android:visibility="gone"
                 android:layout_height="0.5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
@@ -273,9 +282,11 @@
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:background="@color/black"
                 android:layout_height="0.5dp"/>
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <TextView
@@ -297,9 +308,11 @@
             <View
                 android:layout_width="match_parent"
                 android:background="@color/black"
+                android:visibility="gone"
                 android:layout_height="0.5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="60dp">
                 <TextView
                     android:layout_width="120dp"
