--- a/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
@@ -4,4 +4,5 @@
     android:layout_width="200dp"
     android:textColor="@color/black"
     android:textSize="27sp"
+    android:background="@color/white"
     android:gravity="center"/>
