--- a/LaserRadar/Robot/app/src/main/res/layout/listview_card.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/listview_card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:background="@color/white"
     android:orientation="vertical"
     android:gravity="center"
     >
@@ -10,25 +11,23 @@
         android:background="@color/black"
         android:layout_height="0.5dp"/>
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/text"
-            android:layout_width="@dimen/btn_width"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:gravity="center"
-            android:text="@string/straight"
-            android:layout_centerVertical="true"
             android:textColor="@color/black"
+            android:layout_centerInParent="true"
             android:textSize="25sp"
             />
-        <Button
-            android:id="@+id/btn"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:text="@string/config_redact"
+        <ImageView
+            android:id="@+id/imageview"
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/ic_launcher"
+            android:layout_height="wrap_content"
             />
     </RelativeLayout>
 
