--- a/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
@@ -67,17 +67,23 @@
             android:textColor="@color/black"
             android:inputType="number"
             android:layout_marginLeft="120dp"
-            android:layout_toLeftOf="@+id/change_name"
             />
     </RelativeLayout>
-    <Button
-        android:id="@+id/btn_sure"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:text="@string/btn_sure"
-        android:layout_height="60dp" />
-    <Button
-        android:id="@+id/btn_delete"
-        android:layout_width="match_parent"
-        android:text="@string/btn_delete"
-        android:layout_height="60dp" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_sure"
+            android:layout_width="match_parent"
+            android:text="@string/btn_sure"
+            android:layout_weight="1"
+            android:layout_height="60dp" />
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="match_parent"
+            android:text="@string/btn_delete"
+            android:layout_weight="1"
+            android:layout_height="60dp" />
+    </LinearLayout>
 </LinearLayout>
