--- a/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
@@ -43,7 +43,7 @@
             android:id="@+id/cardname"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/add_desk"
+            android:hint="@string/add_card"
             android:textColor="@color/black"
             android:layout_marginLeft="120dp"
             android:layout_toLeftOf="@+id/change_name"
