--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,11 @@
         android:orientation="vertical"
         android:layout_height="100dp">
         <HorizontalScrollView
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
                 <GridView
@@ -91,6 +91,10 @@
                 android:layout_alignParentRight="true"
                 />
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:background="@color/black"
+            android:layout_height="0.5dp"/>
         <GridView
             android:id="@+id/gview"
             android:layout_width="match_parent"
@@ -110,9 +114,9 @@
         <LinearLayout
             android:id="@+id/linearlayout_all"
             android:layout_width="100dp"
+            android:visibility="gone"
             android:layout_alignParentLeft="true"
             android:orientation="vertical"
-            android:visibility="gone"
             android:background="@mipmap/bg"
             android:layout_height="match_parent">
             <ListView
