--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot.xml
@@ -57,7 +57,7 @@
                     android:text="@string/name"/>
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -83,7 +83,7 @@
 
                 <TextView
                     android:id="@+id/ip"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -106,7 +106,7 @@
                     android:text="@string/outline"/>
                 <TextView
                     android:id="@+id/outline"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -129,7 +129,7 @@
                     android:text="@string/electric"/>
                 <TextView
                     android:id="@+id/electric"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -152,7 +152,7 @@
                     android:text="@string/area"/>
                 <TextView
                     android:id="@+id/area"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -175,7 +175,7 @@
                     android:text="@string/state"/>
                 <TextView
                     android:id="@+id/state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -198,7 +198,7 @@
                     android:text="@string/robot_state"/>
                 <TextView
                     android:id="@+id/robot_state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -223,7 +223,7 @@
                     android:text="@string/command_num"/>
                 <TextView
                     android:id="@+id/command_num"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -248,7 +248,7 @@
                     android:text="@string/excute_command"/>
                 <TextView
                     android:id="@+id/excute_command"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -273,7 +273,7 @@
                     android:text="@string/excute_time"/>
                 <TextView
                     android:id="@+id/excute_time"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -298,7 +298,7 @@
                     android:text="@string/command_state"/>
                 <TextView
                     android:id="@+id/command_state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -323,7 +323,7 @@
                     android:text="@string/last_command_state"/>
                 <TextView
                     android:id="@+id/last_command_state"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
@@ -346,7 +346,30 @@
                     android:text="@string/last_location"/>
                 <TextView
                     android:id="@+id/last_location"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textSize="25sp"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_height="match_parent"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="0.5dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:textSize="25sp"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_height="match_parent"
+                    android:text="@string/obstacle"/>
+                <TextView
+                    android:id="@+id/obstacle"
+                    android:layout_width="match_parent"
                     android:textSize="25sp"
                     android:gravity="center"
                     android:textColor="@color/black"
