--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -31,17 +31,16 @@
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/linear_robot"
-        android:layout_toRightOf="@+id/map_right_Ralative"
         android:layout_below="@+id/main"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="100dp">
         <HorizontalScrollView
+            android:id="@+id/aas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
             <LinearLayout
-                android:id="@+id/linear_robot1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
@@ -57,14 +56,12 @@
         </HorizontalScrollView>
     </LinearLayout>
     <View
-        android:layout_toRightOf="@+id/map_right_Ralative"
         android:layout_below="@+id/linear_robot"
         android:id="@+id/view"
         android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"/>
     <LinearLayout
-        android:layout_toRightOf="@+id/map_right_Ralative"
         android:id="@+id/linear_desk"
         android:layout_below="@+id/view"
         android:orientation="vertical"
