--- a/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
@@ -8,19 +8,21 @@
     android:padding="10dp"
     >
     <RelativeLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@animator/btn_desk_selector"
+            android:background="@mipmap/kongxian02"
             />
         <TextView
             android:id="@+id/name"
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
+            android:text="@string/btn_sure"
             android:gravity="center"
             android:textSize="25sp"
             android:layout_height="match_parent" />
@@ -28,10 +30,10 @@
     <TextView
         android:id="@+id/text"
         android:layout_marginTop="9dp"
+        android:layout_weight="3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="@string/btn_cancle"
-        android:layout_gravity="center"
         android:gravity="center"
         android:textSize="13sp"
         android:textColor="#666666"
