--- a/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/grid_item.xml
@@ -1,30 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_width="250dp"
+    android:layout_height="125dp"
+    android:orientation="horizontal"
     android:gravity="center"
+    android:background="@color/white"
     >
-    <ImageView
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/imageview"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        />
-    <TextView
-        android:id="@+id/name"
-        android:textColor="@color/black"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <View
-        android:background="@color/black"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/imageview"
+            android:layout_width="85dp"
+            android:layout_centerVertical="true"
+            android:layout_height="85dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="15dp"
+            android:background="@mipmap/zaixian"
+            />
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"/>
-    <TextView
-        android:id="@+id/text"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:textSize="22sp"
+            android:textColor="#333333"
+            android:text="@string/deskname_setting"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:layout_marginTop="12dp"
+            android:id="@+id/text"
+            android:textSize="16sp"
+            android:text="@string/deskname_setting"
+            android:textColor="#FFFFFF"
+            android:background="@color/green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
 </LinearLayout>
